--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.host=127.0.0.1
-spring.data.mongodb.port=27017
+spring.data.mongodb.host=ds019846.mlab.com
+spring.data.mongodb.port=19846
