--- a/pom.xml
+++ b/pom.xml
@@ -7,15 +7,7 @@
 	<version>1.0</version>
 	<name>rest</name>
 	
-	<properties>
-<tomcat.version>7.0.34</tomcat.version>
-<jersey.version>1.8</jersey.version>
-<target.version>1.7</target.version>
-<appassembler.version>1.8</appassembler.version>
-<source.version>1.7</source.version>
-<mvn.compiler.version>3.0</mvn.compiler.version>
-<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-</properties>
+	
 	
 	<repositories>
 		<repository>
@@ -83,59 +75,29 @@
 
 	</dependencies>
 	<build>
-<finalName>rest</finalName>
-<plugins>
-<!--
- <plugin> <artifactId>maven-war-plugin</artifactId> <version>2.1.1</version> 
-				<configuration> <warSourceDirectory>src/main/java/com</warSourceDirectory> 
-				<webResources> <resource> <directory>WebContent</directory> </resource> </webResources> 
-				</configuration> </plugin> 
--->
-<plugin>
-<groupId>org.apache.maven.plugins</groupId>
-<artifactId>maven-dependency-plugin</artifactId>
-<version>2.3</version>
-<executions>
-<execution>
-<phase>package</phase>
-<goals>
-<goal>copy</goal>
-</goals>
-<configuration>
-<artifactItems>
-<artifactItem>
-<groupId>com.github.jsimone</groupId>
-<artifactId>webapp-runner</artifactId>
-<version>7.0.40.0</version>
-<destFileName>webapp-runner.jar</destFileName>
-</artifactItem>
-</artifactItems>
-</configuration>
-</execution>
-</executions>
-</plugin>
-<plugin>
-<groupId>org.codehaus.mojo</groupId>
-<artifactId>appassembler-maven-plugin</artifactId>
-<version>${appassembler.version}</version>
-<configuration>
-<assembleDirectory>target</assembleDirectory>
-<programs>
-<program>
-<mainClass>launch.Main</mainClass>
-<name>webapp</name>
-</program>
-</programs>
-</configuration>
-<executions>
-<execution>
-<phase>package</phase>
-<goals>
-<goal>assemble</goal>
-</goals>
-</execution>
-</executions>
-</plugin>
-</plugins>
-</build>
+    <finalName>test</finalName>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>2.3</version>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals><goal>copy</goal></goals>
+                    <configuration>
+                        <artifactItems>
+                            <artifactItem>
+                                <groupId>com.github.jsimone</groupId>
+                                <artifactId>webapp-runner</artifactId>
+                                <version>8.0.30.2</version>
+                                <destFileName>webapp-runner.jar</destFileName>
+                            </artifactItem>
+                        </artifactItems>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
+    </plugins>
+  </build>
 </project>
