--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
         </dependency>
 	</dependencies>
 	<build>
+		<finalName>rest</finalName>
         <plugins>
 	   <plugin>
 		<artifactId>maven-compiler-plugin</artifactId>
