--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,20 +1,23 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<web-app version="3.0"
-         xmlns="http://java.sun.com/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-         xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-         metadata-complete="false">
-<display-name>RESTWebApp</display-name>  
- <servlet>  
-  <servlet-name>jersey-serlvet</servlet-name>  
-  <servlet-class>  
-         com.sun.jersey.spi.container.servlet.ServletContainer  
-        </servlet-class>  
- <load-on-startup>1</load-on-startup>  
- </servlet>   
- <servlet-mapping>  
-  <servlet-name>jersey-serlvet</servlet-name>  
-  <url-pattern>/api/*</url-pattern>  
- </servlet-mapping>  
-</web-app>
+
+<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
+          http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+    version="3.0">
+    <display-name>Archetype Created Web Application</display-name>
+     <welcome-file-list>
+    <welcome-file>index.jsp</welcome-file>
+  </welcome-file-list>
+    <servlet>
+  <servlet-name>springmvc-dispatcher</servlet-name>
+  <servlet-class>
+   org.springframework.web.servlet.DispatcherServlet
+        </servlet-class>
+  <load-on-startup>1</load-on-startup>
+ </servlet>
+ 
+ <servlet-mapping>
+  <servlet-name>springmvc-dispatcher</servlet-name>
+  <url-pattern>/</url-pattern>
+ </servlet-mapping> 
+    </web-app>
+
