--- a/pom.xml
+++ b/pom.xml
@@ -313,7 +313,7 @@
 				</configuration>
 			</plugin>
 			
-			<!-- <plugin>
+			 <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
 				<version>2.3</version>
@@ -335,7 +335,7 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin> -->
+			</plugin>
 		</plugins>
 	</build>
 		
