--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: java
-script: mvn clean install -DskipTests=true -Dmaven.javadoc.skip=true
+script: mvn install -DskipTests=true -Dmaven.javadoc.skip=true
 deploy:
   provider: heroku
   app: test-spring123
